lib/vrl/tree-sitter-vrl/test/corpus/queries.txt
============================================
Local Variables
============================================
  foo
 _foo
0123foo
f_o_o
---

(program
  (exprs
    (expr (query (local_query (local_variable))))
    (expr (query (local_query (local_variable))))
    (expr (query (local_query (local_variable))))
    (expr (query (local_query (local_variable))))
  )
)


============================================
Local Queries
============================================
   foo.x
   foo.@bar
   foo.x.y
   foo.(x|y)
   foo.( x | y )
   foo."content-type"
   foo.("@($&" | "bar")
---

(program
  (exprs
    (expr (query (local_query (local_variable) (query_segments (query_field)))))
    (expr (query (local_query (local_variable) (query_segments (query_field)))))
    (expr (query (local_query (local_variable) (query_segments (query_field) (query_field)))))
    (expr (query (local_query (local_variable) (query_segments (query_coalesce (query_field) (query_field))))))
    (expr (query (local_query (local_variable) (query_segments (query_coalesce (query_field) (query_field))))))
    (expr (query (local_query (local_variable) (query_segments (query_field (quoted_field))))))
    (expr (query (local_query (local_variable) (query_segments (query_coalesce (query_field (quoted_field)) (query_field (quoted_field)))))))
  )
)


============================================
Event Queries
============================================
   .
   .foo
   .foo.bar
   .@foo.b@r
---

(program
  (exprs
    (expr (query (target_query (target_query_prefix))))
    (expr (query (target_query (target_query_prefix) (query_segments (query_field)))))
    (expr (query (target_query (target_query_prefix) (query_segments (query_field) (query_field)))))
    (expr (query (target_query (target_query_prefix) (query_segments (query_field) (query_field)))))
  )
)

============================================
Target Queries
============================================
   %
   %foo
   %foo.bar
   %@foo.b@r
---

(program
  (exprs
    (expr (query (target_query (target_query_prefix))))
    (expr (query (target_query (target_query_prefix) (query_segments (query_field)))))
    (expr (query (target_query (target_query_prefix) (query_segments (query_field) (query_field)))))
    (expr (query (target_query (target_query_prefix) (query_segments (query_field) (query_field)))))
  )
)
